--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -41,7 +41,7 @@ jobs:
         run: |
           set -e
           # Run semantic-release dry-run and capture version if available after the specific phrase
-          NEXT_VERSION=$(npx semantic-release --dry-run --no-ci 2>/dev/null | grep -oP '(?<=The next release version is )\d+(\.\d+){2,}' || true)
+          NEXT_VERSION=$(npx semantic-release --dry-run --no-ci 2>/dev/null | grep -oP '(?<=[Tt]he next release version is )\d+(\.\d+){2,}' || true)
           if [ -z "$NEXT_VERSION" ]; then
             echo "No new version to release. Skipping release."
             echo "SKIP_RELEASE=true" >> $GITHUB_ENV
